--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "data movement"
   ],
   "dependencies": {
+    "async": "^2.0.0-rc.1",
     "bluemix-helper-config": "^0.1.13",
     "lodash": "^4.6.1",
     "passport-trello": "^0.1.5",
     "request": "^2.69.0",
     "simple-data-pipe-sdk": "git://github.com/ibm-cds-labs/simple-data-pipe-sdk.git#pp_validation",
-    "trello": "^0.5.1",
+    "trello": "git://github.com/norberteder/trello.git",
     "util": "^0.10.3"
   },
   "author": {
