--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lodash": "^4.6.1",
     "passport-trello": "^0.1.5",
     "request": "^2.69.0",
-    "simple-data-pipe-sdk": "git://github.com/ibm-cds-labs/simple-data-pipe-sdk.git#pp_validation",
+    "simple-data-pipe-sdk": "^0.2.4",
     "trello": "git://github.com/norberteder/trello.git",
     "util": "^0.10.3"
   },
